Update cilium helm

--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -18,6 +18,10 @@ cni:
 # devices: eno+ eth+
 endpointRoutes:
   enabled: true
+policyAuditMode: true
+policyEnforcementMode: "never"
+envoyConfig:
+  enabled: true
 envoy:
   enabled: true
   debug:
