--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -18,7 +18,7 @@ resources:
   - ./proxmox
   - ./influx
   - ./bazarr
-#  - ./all-ports-policy.yaml
+  - ./network-policy.yaml
 
 configMapGenerator:
   - name: general-dashboards
