--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./external-dns/ks.yaml
   - ./ingress-nginx/ks.yaml
   - ./k8s-gateway/ks.yaml
-#  - ./network-policy.yaml
+  - ./network-policy.yaml
 configMapGenerator:
   - name: network-dashboards
     namespace: network
