--- a/kubernetes/apps/network/network-policy.yaml
+++ b/kubernetes/apps/network/network-policy.yaml
@@ -6,25 +6,15 @@ metadata:
 spec:
   endpointSelector: {}
   ingress:
-    - fromEndpoints:
-        - {}
-    - fromEntities:
-        - all
     - toPorts:
         - ports:
             - port: "80"
-              protocol: ANY
+              protocol: TCP
             - port: "443"
-              protocol: ANY
+              protocol: TCP
           rules:
             http: [{}]
   egress:
-    - toEndpoints:
-        - {}
-    - toEntities:
-        - world
-    - toEntities:
-        - cluster
     - toEndpoints:
         - matchLabels:
             io.kubernetes.pod.namespace: kube-system
