--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -19,7 +19,7 @@ cni:
 endpointRoutes:
   enabled: true
 policyAuditMode: true
-policyEnforcementMode: "never"
+#policyEnforcementMode: "never"
 envoyConfig:
   enabled: true
 envoy:
