--- a/kubernetes/apps/network/network-policy.yaml
+++ b/kubernetes/apps/network/network-policy.yaml
@@ -12,6 +12,8 @@ spec:
               protocol: TCP
             - port: "443"
               protocol: TCP
+            - port: "4245"
+              protocol: TCP
           rules:
             http: [{}]
   egress:
