--- a/kubernetes/apps/default/authentik/authentik.yaml
+++ b/kubernetes/apps/default/authentik/authentik.yaml
@@ -41,7 +41,7 @@ spec:
         enabled: true
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
-          nginx.ingress.kubernetes.io/service-upstream: "true"
+          nginx.ingress.kubernetes.io/service-upstream: "false"
         ingressClassName: internal
         hosts: &hosts
           - authentik.internal.${SECRET_DOMAIN}
