--- a/kubernetes/apps/default/influx/influxdb-ingress.yaml
+++ b/kubernetes/apps/default/influx/influxdb-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
-    nginx.ingress.kubernetes.io/service-upstream: "true"
+    nginx.ingress.kubernetes.io/service-upstream: "false"
 spec:
   ingressClassName: internal
   rules:
