--- a/kubernetes/apps/default/portainer/portainer.yaml
+++ b/kubernetes/apps/default/portainer/portainer.yaml
@@ -30,7 +30,7 @@ spec:
       ingressClassName: internal
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
-        nginx.ingress.kubernetes.io/service-upstream: "true"
+        nginx.ingress.kubernetes.io/service-upstream: "false"
       hosts:
         - host: portainer.internal.${SECRET_DOMAIN}
           paths:
