--- a/kubernetes/apps/flux-system/weave/weave-dashboard.yaml
+++ b/kubernetes/apps/flux-system/weave/weave-dashboard.yaml
@@ -57,7 +57,7 @@ spec:
       className: internal
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-production
-        nginx.ingress.kubernetes.io/service-upstream: "true"
+        nginx.ingress.kubernetes.io/service-upstream: "false"
       hosts:
         - host: &host weave.internal.${SECRET_DOMAIN}
           paths:
