--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -75,7 +75,7 @@ spec:
         ingressClassName: internal
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
-          nginx.ingress.kubernetes.io/service-upstream: "true"
+          nginx.ingress.kubernetes.io/service-upstream: "false"
         hosts:
           - grafana.internal.${SECRET_DOMAIN}
         tls:
