Update network policies

--- a/kubernetes/apps/network/network-policy.yaml
+++ b/kubernetes/apps/network/network-policy.yaml
@@ -16,6 +16,8 @@ spec:
               protocol: TCP
             - port: "4245"
               protocol: TCP
+            - port: "4317"
+              protocol: ANY
           rules:
             http: [{}]
   egress:
