--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -90,6 +90,16 @@ spec:
       data:
         enabled: true
         existingClaim: media-pvc-ssd
+      custom-services.d:
+        enabled: true
+        type: persistentVolumeClaim
+        storageClass: nfs-client-ssd
+        accessMode: ReadWriteOnce
+        size: 1Gi
+      custom-cont-init.d:
+        enabled: true
+        type: configMap
+        name: script-init
     service:
       exportarr:
         controller: main
