--- a/kubernetes/apps/default/autobrr/autobrr.yaml
+++ b/kubernetes/apps/default/autobrr/autobrr.yaml
@@ -57,6 +57,7 @@ spec:
         enabled: true
         size: 1Gi
         storageClass: nfs-client-ssd
+        accessMode: ReadWriteOnce
     service:
       autobrr:
         controller: main
