--- a/kubernetes/apps/default/nzbget/nzbget.yaml
+++ b/kubernetes/apps/default/nzbget/nzbget.yaml
@@ -57,6 +57,7 @@ spec:
         enabled: true
         size: 1Gi
         storageClass: nfs-client-ssd
+        accessMode: ReadWriteOnce
       data:
         enabled: true
         existingClaim: media-pvc-ssd
