--- a/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
+++ b/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
@@ -56,7 +56,7 @@ spec:
               - name: OTEL_PYTHON_DJANGO_EXCLUDED_URLS
                 value: /api/notification/,/api/ping/,/health
               - name: OTEL_EXPORTER_OTLP_ENDPOINT
-                value: http://istio-collector-collector.istio-system.svc.cluster.local:4317
+                value: http://default-collector.default.svc.cluster.local:4317
               - name: OTEL_EXPORTER_OTLP_PROTOCOL
                 value: grpc
               - name: OTEL_EXPORTER_OTLP_COMPRESSION
