--- a/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
+++ b/kubernetes/apps/observability/uptrace/nodejs-instrumentation.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   exporter:
-    endpoint: http://istio-collector-collector.istio-system.svc.cluster.local:4317
+    endpoint: http://default-collector.default.svc.cluster.local:4317
   propagators:
     - tracecontext
     - baggage
@@ -36,7 +36,7 @@ metadata:
   namespace: default
 spec:
   exporter:
-    endpoint: http://istio-collector-collector.istio-system.svc.cluster.local:4318
+    endpoint: http://default-collector.default.svc.cluster.local:4318
   propagators:
     - tracecontext
     - baggage
@@ -57,7 +57,7 @@ metadata:
   namespace: default
 spec:
   exporter:
-    endpoint: http://istio-collector-collector.istio-system.svc.cluster.local:4317
+    endpoint: http://default-collector.default.svc.cluster.local:4317
   propagators:
     - tracecontext
     - baggage
