--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -7,67 +7,139 @@ metadata:
 spec:
   chart:
     spec:
-      chart: sonarr
+      chart: app-template
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home
+        name: bjw-s
         namespace: flux-system
-  interval: 6h
-  install:
-    remediation:
-      retries: 30
-  upgrade:
-    remediation:
-      retries: 30
+      version: 3.4.0
+  interval: 12h0m0s
+  releaseName: sonarr
+  targetNamespace: default
   values:
+    controllers:
+      main:
+        containers:
+          exportarr:
+            enabled: true
+            args:
+              - sonarr
+            env:
+              - name: URL
+                value: http://sonarr:8989
+              - name: PORT
+                value: 7879
+              - name: CONFIG
+                value: /config/config.xml
+              - name: FORM_AUTH
+                value: false
+              - name: ENABLE_ADDITIONAL_METRICS
+                value: true
+              - name: DISABLE_SSL_VERIFY
+                value: true
+            envFrom:
+              - secret: sonarr-apikey
+            image:
+              repository: ghcr.io/onedr0p/exportarr
+              tag: v2.0.1
+          sonarr:
+            env:
+              - name: TZ
+                value: America/Chicago
+              - name: PUID
+                value: 1000
+              - name: PGID
+                value: 1000
+            image:
+              repository: linuxserver/sonarr
+              tag: 4.0.9.2244-ls257
+        enabled: true
+        type: deployment
     global:
+      fullnameOverride: sonarr
       labels:
         app: sonarr
-    env:
-      TZ: America/Chicago
-      PUID: 568
-      PGID: 568
-    image:
-      repository: linuxserver/sonarr
-      tag: 4.0.9
     ingress:
-      main:
-        enabled: true
-        ingressClassName: internal
+      sonarr:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
-          hajimari.io/enable: "true"
-          hajimari.io/group: Media
-          hajimari.io/icon: mdi:television-classic
+          nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
+          nginx.ingress.kubernetes.io/otel-service-name: sonarr
           nginx.ingress.kubernetes.io/service-upstream: "false"
+        className: internal
+        enabled: true
         hosts:
-          - host: &host sonarr.internal.${SECRET_DOMAIN}
+          - host: sonarr.internal.${SECRET_DOMAIN}
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  identifier: sonarr
         tls:
           - hosts:
-              - *host
+              - sonarr.internal.${SECRET_DOMAIN}
             secretName: sonarr-tls
     persistence:
       config:
+        accessMode: ReadWriteOnce
         enabled: true
-        storageClass: openebs-hostpath
-      vids:
+        size: 1Gi
+        storageClass: nfs-client-ssd
+        type: persistentVolumeClaim
+      data:
         enabled: true
-        mountPath: /data
-        storageClass: openebs-hostpath
-        accessMode: ReadWriteMany
         existingClaim: media-pvc-ssd
-        size: 250Gi
-    metrics:
-      enabled: true
-      exporter:
-        image:
-          repository: ghcr.io/onedr0p/exportarr
-          tag: v2.0.1
-          pullPolicy: IfNotPresent
-        env:
-          additionalMetrics: true
-          unknownQueueItems: true
+      custom-services:
+        enabled: true
+        type: persistentVolumeClaim
+        storageClass: nfs-client-ssd
+        accessMode: ReadWriteOnce
+        size: 1Gi
+        advancedMounts:
+          main:
+            sonarr:
+              - path: /custom-services.d
+                readOnly: false
+      custom-cont-init:
+        enabled: true
+        type: configMap
+        name: sonarr-scripts
+        advancedMounts:
+          main:
+            sonarr:
+              - path: /custom-cont-init.d
+                readOnly: false
+    service:
+      exportarr:
+        controller: main
+        enabled: true
+        ports:
+          metrics:
+            appProtocol: http
+            enabled: true
+            port: 7879
+            primary: false
+            protocol: HTTP
+        primary: false
+      sonarr:
+        controller: main
+        enabled: true
+        ports:
+          http:
+            appProtocol: http
+            enabled: true
+            port: 8989
+            protocol: HTTP
+    serviceAccount:
+      create: true
+    serviceMonitor:
+      exportarr:
+        enabled: true
+        endpoints:
+          - interval: 4m
+            path: /metrics
+            port: metrics
+            scheme: http
+            scrapeTimeout: 90s
+        serviceName: sonarr-exportarr
