--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -38,8 +38,11 @@ spec:
                 value: true
               - name: DISABLE_SSL_VERIFY
                 value: true
-            envFrom:
-              - secret: sonarr-apikey
+              - name: APIKEY
+                valueFrom:
+                  secretKeyRef:
+                    name: sonarr-apikey
+                    key: API_KEY
             image:
               repository: ghcr.io/onedr0p/exportarr
               tag: v2.0.1
@@ -51,6 +54,11 @@ spec:
                 value: 1000
               - name: PGID
                 value: 1000
+              - name: APIKEY
+                valueFrom:
+                  secretKeyRef:
+                    name: sonarr-apikey
+                    key: API_KEY
             image:
               repository: linuxserver/sonarr
               tag: 4.0.9.2244-ls257
@@ -74,6 +82,7 @@ spec:
           gethomepage.dev/name: Sonarr
           gethomepage.dev/widget.type: "sonarr"
           gethomepage.dev/widget.url: https://sonarr.internal.${SECRET_DOMAIN}
+          gethomepage.dev/widget.key: ${APIKEY}
           gethomepage.dev/pod-selector: ""
         className: internal
         enabled: true
