--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -81,7 +81,7 @@ spec:
           gethomepage.dev/icon: sonarr.png
           gethomepage.dev/name: Sonarr
           gethomepage.dev/widget.type: "sonarr"
-          gethomepage.dev/widget.url: https://sonarr.internal.${SECRET_DOMAIN}
+          gethomepage.dev/widget.url: http://sonarr:8989
           gethomepage.dev/widget.key: "${APIKEY}"
           gethomepage.dev/pod-selector: ""
         className: internal
