--- a/kubernetes/apps/default/sonarr/sonarr.yaml
+++ b/kubernetes/apps/default/sonarr/sonarr.yaml
@@ -54,7 +54,7 @@ spec:
                 value: 1000
               - name: PGID
                 value: 1000
-              - name: APIKEY
+              - name: HOMEPAGE_VAR_SONARR_API_KEY
                 valueFrom:
                   secretKeyRef:
                     name: sonarr-apikey
@@ -82,7 +82,7 @@ spec:
           gethomepage.dev/name: Sonarr
           gethomepage.dev/widget.type: "sonarr"
           gethomepage.dev/widget.url: http://sonarr:8989
-          gethomepage.dev/widget.key: ""
+          gethomepage.dev/widget.key: "{{HOMEPAGE_VAR_SONARR_API_KEY}}"
           gethomepage.dev/pod-selector: ""
         className: internal
         enabled: true
