Use configmap for homepage settings

--- a/kubernetes/apps/default/homepage/homepage.yaml
+++ b/kubernetes/apps/default/homepage/homepage.yaml
@@ -70,15 +70,15 @@ spec:
             homepage:
               - path: /app/config
                 readOnly: false
-#      settings:
-#        enabled: true
-#        type: configMap
-#        name: home-settings
-#        advancedMounts:
-#          main:
-#            homepage:
-#              - path: /app/config
-#                readOnly: false
+      settings:
+        enabled: true
+        type: configMap
+        name: home-settings
+        advancedMounts:
+          main:
+            homepage:
+              - path: /app/config
+                readOnly: false
     service:
       homepage:
         controller: main
