--- a/kubernetes/apps/default/homepage/homepage.yaml
+++ b/kubernetes/apps/default/homepage/homepage.yaml
@@ -22,7 +22,9 @@ spec:
       main:
         initContainers:
           copy-config:
-            image: busybox:latest
+            image:
+              repository: busybox
+              tag: latest
             command:
               - /bin/sh
               - -c
