--- a/kubernetes/apps/default/homepage/homepage.yaml
+++ b/kubernetes/apps/default/homepage/homepage.yaml
@@ -17,6 +17,10 @@ spec:
   interval: 12h0m0s
   releaseName: homepage
   targetNamespace: default
+  install:
+    disableSchemaValidation: true
+  upgrade:
+    disableSchemaValidation: true
   values:
     controllers:
       main:
