--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -51,6 +51,11 @@ spec:
                 value: 1000
               - name: PGID
                 value: 1000
+              - name: HOMEPAGE_VAR_RADARR_APIKEY
+                valueFrom:
+                  secretKeyRef:
+                    name: radarr-apikey
+                    key: API_KEY
             image:
               repository: linuxserver/radarr
               tag: 5.11.0
