--- a/kubernetes/apps/default/homepage/homepage.yaml
+++ b/kubernetes/apps/default/homepage/homepage.yaml
@@ -29,6 +29,11 @@ spec:
                 value: 1000
               - name: PGID
                 value: 1000
+              - name: HOMEPAGE_VAR_RADARR_APIKEY
+                valueFrom:
+                  secretKeyRef:
+                    name: radarr-apikey
+                    key: API_KEY
             image:
               repository: ghcr.io/gethomepage/homepage
               tag: v0.9.10
